tests/compile-fail/compile_fail__unknown_variable.snap
---
source: tests/compile-fail.rs
expression: stderr
---
error: unknown variable 'y'
   ┌─ <input>:27:15
   │
27 │       int x = y;  
   │               ^ not found in this scope


